--- a/index.html
+++ b/index.html
@@ -5,14 +5,74 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
         <link href="css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ Home </title>
     </head>
     <body>
         <header>
-
+            <div><img src="images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="index.html"> HOME </a></li>
+                    <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="events/news.html"> NEWS </a></li>
+                    <li> <a href="about.html"> ABOUT US </a></li>
+                    <li> <a href="contact.html"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image"> </div>
+            <section class="wrap">
+            <div><input type="button" value="Visit Our Exhibition" class="cta"></div>
+                <section class="container">
+                    <div>
+                        <h2>COSMOLOGY</h2>
+                        <p>Read more</p>
+                    </div>
+                    <div>
+                        <img src="images/skyandstars.jpg" alt="Sky and Stars" class="add_image">
+                    </div>
+                </section>
+                <section class="container">
+                    <div>
+                        <h2>ROBOTICS & AI</h2>
+                        <p>Read more</p>
+                    </div>
+                    <div>
+                        <img src="/images/roboticsandai.jpg" alt="Robot on the bench reading from tablet" class="add_image">
+                    </div>
+                </section>
+                <section class="container">
+                    <div>
+                        <h2>ECOLOGY</h2>
+                        <p>Read more</p>
+                    </div>
+                    <div>
+                        <img src="images/ecology.jpg" alt="Trees above head, pointing to the sky" class="add_image">
+                    </div>
+                </section>
+            </section>
+            <section class="news_heading">
+                <h2>NEWS</h2>
+                </section>
+                <section class="news">
+                    <div class="wrap_box">
+                        <img src="/images/aeronautics.jpg" alt="Man inside of a " class="news_image1">
+                        <h3>Visiting Professor of Aeronautics</h3>
+                        <p>Read more</p>
+                    </div>
+                    <div class="wrap_box">
+                        <img src="/images/nightinthemuseum.jpg" alt="Night in the museum hall" class="news_image2">
+                        <h3>Night in the Museum</h3>
+                        <p>Read more</p>
+                    </div>
+                </section>
+            
         </main>
         <footer>
 
