--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p>Read more</p>
                     </div>
                     <div>
-                        <img src="images/skyandstars.jpg" alt="Sky and Stars" class="add_image">
+                        <img src="images/skyandstars1.jpg" alt="Sky and Stars" class="add_image">
                     </div>
                 </section>
                 <section class="container">
@@ -44,7 +44,7 @@
                         <p>Read more</p>
                     </div>
                     <div>
-                        <img src="/images/roboticsandai.jpg" alt="Robot on the bench reading from tablet" class="add_image">
+                        <img src="/images/roboticsandai1.jpg" alt="Robot on the bench reading from tablet" class="add_image">
                     </div>
                 </section>
                 <section class="container">
@@ -53,7 +53,7 @@
                         <p>Read more</p>
                     </div>
                     <div>
-                        <img src="images/ecology.jpg" alt="Trees above head, pointing to the sky" class="add_image">
+                        <img src="images/ecology1.jpg" alt="Trees above head, pointing to the sky" class="add_image">
                     </div>
                 </section>
             </section>
@@ -62,12 +62,12 @@
                 </section>
                 <section class="news">
                     <div class="wrap_box">
-                        <img src="/images/aeronautics.jpg" alt="Man inside of a " class="news_image1">
+                        <img src="/images/aeronautics1.jpg" alt="Man inside of a " class="news_image">
                         <h3>Visiting Professor of Aeronautics</h3>
                         <p>Read more</p>
                     </div>
                     <div class="wrap_box">
-                        <img src="/images/nightinthemuseum.jpg" alt="Night in the museum hall" class="news_image2">
+                        <img src="/images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
                         <h3>Night in the Museum</h3>
                         <p>Read more</p>
                     </div>
