--- a/events/explore.html
+++ b/events/explore.html
@@ -4,15 +4,46 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="../css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ Explore </title>
     </head>
     <body>
         <header>
-
+            <div><img src="../images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="../index.html"> HOME </a></li>
+                    <li> <a href="exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="explore.html" class="active"> EXPLORE </a></li>
+                    <li> <a href="getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="news.html"> NEWS </a></li>
+                    <li> <a href="../about.html"> ABOUT US </a></li>
+                    <li> <a href="../contact.html"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <h1 class="main_heading"> Explore </h1> 
+            <img src="../images/kidreading1.jpg" alt="Kid reading a book" class="background_image" >
+            <h2 class="heading"> For Kids</h2>
+            <p> Are you a young person looking to learn more about science? Come on down to our museum, there is plenty to see and do. </p>
+            <p> You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Wolly Mamooth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore. </p>
+            <h3> Young Star Club </h3>
+            <p> We also have a Young Stars club which meets once a week on a Saturday between 10:oo and 13:00 where you will get to wxplore and experiment with our team of experts.
+                During the scool holidays we run special holiday clubs where you can join other children your age to go on a journe of discovery. Each holiday we pick a new theme to explore. </p>
+            <p> To find out more about holiday club and how you can join, send us a message.</p>
+            <img src="../images/ajnstajn1.jpg" alt="Albert Ainstains grafit on the wall" class="background_image">
+            <h2 class="heading"> For Teachers </h2>
+            <p> As a community-driven museum, we want to work with schools to create places of learning and exploring. </p> 
+            <p> Our team is on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them. </p>
+            <p> Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit. </p>
+            <img src="../images/research1.jpg" alt="Scientist looking in the microscope" class="background_image">
+            <h2 class="heading"> For Researchers </h2>
+            <p> Are you looking to get involved with our team of researchers and academics? Our museum offers various ways towards them. We have online recods, labaratory space and a working relationship with a number of universities around the country.</p> 
+            <p> Get in touch with us! </p>
         </main>
         <footer>
 
