--- a/events/getinvolved.html
+++ b/events/getinvolved.html
@@ -4,15 +4,48 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
-        <link href="css/style.css" rel="stylesheet">
-        <title> SciMuse Community Science Museum ⎮ Get Involved </title>
+        <link href="../css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
+        <title> SciMuse Community Science Museum ⎮ Get involved </title>
     </head>
     <body>
         <header>
-
+            <div><img src="../images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="../index.html"> HOME </a></li>
+                    <li> <a href="exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="explore.html"> EXPLORE </a></li>
+                    <li> <a href="getinvolved.html" class="active"> GET INVOLVED </a></li>
+                    <li> <a href="news.html"> NEWS </a></li>
+                    <li> <a href="../about.html"> ABOUT US </a></li>
+                    <li> <a href="../contact.html"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <h1></h1>
+            <img src="../images/library1.jpg" alt="Photo of our library" class="background_image">
+            <div>
+                <h2 class="heading"> Support </h2>
+                <p> There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. </p>
+                <p> You can also support us by donating items of interest to the museums collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you. </p>
+            </div>
+            <div>
+                <img src="../images/volunteers.jpg" alt="Group of volunteers happy to volunteer" class="background_image">
+                <h2 class="heading"> Volunteer </h2>
+                <p> A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes ofa working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum. </p>
+                <p> You can help volunteer in a number of different spheres. Please contact us if you would like to find out more about how you can get involved. </p>
+            </div>
+            <div> 
+                <img src="../images/skeleton1.jpg" alt="Skeletons in the window - exhibit" class="background_image">
+                <h2 class="heading"> Internship </h2>
+                <p> Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well, you could be just the right person to enjoy an internship at the museum. </p>
+                <p> You will be learning from a number of different academics and people who are passionate about science and sharing it with the wider community. </p>
+                <p> If you are that person, feel free to contact us or come and visit us.</p>
+            </div>
         </main>
         <footer>
 
