--- a/events/news.html
+++ b/events/news.html
@@ -4,15 +4,49 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="../css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ News </title>
     </head>
     <body>
         <header>
-
+            <div><img src="../images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="../index.html"> HOME </a></li>
+                    <li> <a href="exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="explore.html"> EXPLORE </a></li>
+                    <li> <a href="getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="news.html" class="active"> NEWS </a></li>
+                    <li> <a href="../about.html"> ABOUT US </a></li>
+                    <li> <a href="../contact.html"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
         <main>
-
+            <section> 
+                <div class="news_page_background"> </div>
+                <h1> News // Events </h1>
+            </section>
+            <h2 class="heading"> Visiting Professor of Aeronautics </h2>
+            <img src="../images/aeronautics1.jpg" alt="Man with helmet sitting in front of " class="background_image">
+            <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting “space”. </p>
+            <p> Soon more informations about the event. </p>
+            <img src="../images/moon.jpg" alt="All moon shapes" class="background_image">
+            <section> 
+                <div class="news_page_nightinthemuseum"> </div>
+                <h2> Night in the Museum </h2>
+            </section>
+            <p>Get your family together for an exciting night in the museum as you sleep over bedside dinosaurs and science displays.Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science. </p>
+            <p> From January, once a month, second thursday in the month. See you! </p>
+            <img src="../images/lab.jpg" alt="Sketch in drawing of a lab" class="background_image">
+            <h2 class="heading"> Energetica Exhibition on Loan <h2>
+                <img src="../images/science1.jpg" alt="Scientist in front of huge machine" class="background_image">
+            <p> On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming in February to the Community Science Museum.
+                It is a series of installations that allow visitors to experience the power of the elements as we harness them. </p>
+            <p> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power </p>
         </main>
         <footer>
 
