--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="checkbox" id="hamburger_menu">
             <nav>
                 <ul>
-                    <li> <a href="index.html"> HOME </a></li>
+                    <li> <a href="index.html" class="active"> HOME </a></li>
                     <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
                     <li> <a href="events/explore.html"> EXPLORE </a></li>
                     <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
@@ -44,7 +44,7 @@
                         <p>Read more</p>
                     </div>
                     <div>
-                        <img src="/images/roboticsandai1.jpg" alt="Robot on the bench reading from tablet" class="add_image">
+                        <img src="images/roboticsandai1.jpg" alt="Robot on the bench reading from tablet" class="add_image">
                     </div>
                 </section>
                 <section class="container">
@@ -62,12 +62,12 @@
                 </section>
                 <section class="news">
                     <div class="wrap_box">
-                        <img src="/images/aeronautics1.jpg" alt="Man inside of a " class="news_image">
+                        <img src="images/aeronautics1.jpg" alt="Man inside of a " class="news_image">
                         <h3>Visiting Professor of Aeronautics</h3>
                         <p>Read more</p>
                     </div>
                     <div class="wrap_box">
-                        <img src="/images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
+                        <img src="images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
                         <h3>Night in the Museum</h3>
                         <p>Read more</p>
                     </div>
