--- a/about.html
+++ b/about.html
@@ -5,14 +5,38 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
         <link href="css/style.css" rel="stylesheet">
-        <title> SciMuse Community Science Museum ⎮ About us </title>
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
+        <title> SciMuse Community Science Museum ⎮ Home </title>
     </head>
     <body>
         <header>
-
+            <div><img src="images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="index.html"> HOME </a></li>
+                    <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="events/news.html"> NEWS </a></li>
+                    <li> <a href="about.html" class="active"> ABOUT US </a></li>
+                    <li> <a href="contact.html"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
-        <main>
-
+        <main class="about">
+            <img src="images/headcolor1.jpg" alt="Exhibit of a head colored with the nerv paths" class="background_image">
+            <p> Come  join us at the SciMuse, where we are commited to making science accessible to all. </p>
+            <p> Over the course of human history, science has developed from our early understanding of fire, wind, water and earth to exploring everything from galaxies far away to the very building blocks of life itself. </p>
+            <p> The aim of our museum is to create a space where everyone can experience and perhaps even ignite a lifelong passion to continue exploration of the world around us. </p>
+            <img src="images/pink.jpg" alt="Electricity in pink" class="background_image">
+            <p> We believe science should not be confined to the textbook, but brought to life through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from dinosaur exibits - they only come to life at night when everyone  has gone home). </p>
+        <div class="access">
+            <img src="images/accessibility.png" alt="Accessibility helps in our museum, hearing, seeing, wheelchair" class="background_image">
+            <h2 class="heading_news"> Accessibility </h2>
+            <p> The museum has a wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired. </p>
+        </div>
         </main>
         <footer>
 
