--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,55 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Community Science Museum - we make learning fun">
         <link href="css/style.css" rel="stylesheet">
-        <title> SciMuse Community Science Museum ⎮ Contact </title>
+        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
+        <title> SciMuse Community Science Museum ⎮ Home </title>
     </head>
     <body>
         <header>
-
+            <div><img src="images/logo.png" alt="Logo of the Museum"></div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <input type="checkbox" id="hamburger_menu">
+            <nav>
+                <ul>
+                    <li> <a href="index.html"> HOME </a></li>
+                    <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="events/news.html"> NEWS </a></li>
+                    <li> <a href="about.html"> ABOUT US </a></li>
+                    <li> <a href="contact.html" class="active"> CONTACT </a> </li>
+                </ul>
+            </nav>
         </header>
-        <main>
-
+        <main class="contact_page">
+          <h1 class="contact_heading"> Entrance is free for all!</h1>
+            <p> There are guided tours of the museum that leave every hour. </p>
+            <p> You do not need to book it, writing yourself on the list is done by the entrance, includes a handy printed guide of the museum and costs 70nok. </p>
+            <p> If you want to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour. </p>
+            <img src="images/cafe1.jpg" alt="Coffee place in the museum" class="background_image_2">
+            <section class="divided">
+                <div class="left_side">
+                    <h2> Food and drink </h2>
+                    <p> There is cafe attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more. </p>
+                </div>
+                <div class="right_side">
+                    <h2> Shop </h2>
+                    <p> Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you have left the museum. </p>
+                </div>
+            </section>
+            <div class="colored_contact">
+            <img src="images/open1.jpg" alt="Sign for open" class="background_image">
+                <p> Monday: Closed <br> Tuesday: 10h-20h <br> Wednesday: 10h-20h <br> Thursday: 10h-20h <br> 
+                    Friday: 10h-20h <br> Saturday: 11h-19h <br> Sunday: 11h-19h </p>
+            </div>
+            <div>
+                <p> For more informations you can: </p>
+                <p> E-mail us: <br> scimuse@community.com </p>
+                <p> Or give us a call: <br> 96 99 66 69 </p>
+            </div>
+            <div class="colored_contact">
+                <p> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
+            </div>
         </main>
         <footer>
 
