--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div><img src="images/logo.png" alt="Logo of the Museum"></div>
-            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><span><i class="fa-solid fa-bars">hamburger menu</i></span></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
                 <ul>
@@ -67,7 +67,7 @@
                         <p>Read more</p>
                     </div>
                     <div class="wrap_box">
-                        <img src="images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
+                        <img src="/images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
                         <h3>Night in the Museum</h3>
                         <p>Read more</p>
                     </div>
