--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <div> <img src="images/museum.jpg" alt="Museum from outside" class="background_image"> </div>
             <section class="wrap">
-            <div><input type="button" value="Visit Our Exhibition" class="cta"></div>
+            <div><input type="button" value="Visit Our Exhibition" class="homepage_button"></div>
                 <section class="container">
                     <div>
                         <h2>COSMOLOGY</h2>
@@ -67,7 +67,7 @@
                         <p>Read more</p>
                     </div>
                     <div class="wrap_box">
-                        <img src="/images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
+                        <img src="images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
                         <h3>Night in the Museum</h3>
                         <p>Read more</p>
                     </div>
