--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div><img src="images/logo.png" alt="Logo of the Museum"></div>
-            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"></i></label> </div>
+            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
                 <ul>
