--- a/events/exhibits.html
+++ b/events/exhibits.html
@@ -32,7 +32,7 @@
                 <img src="../images/skyandstars1.jpg" alt="Universe sky and stars" class="background_image">
                 <p> Explore the wonders of our cosmos. Our fantastic exhibition, “The Sky Above Us”, explores the night sky and what we can see and know about the universe around us. We will locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by. 
                     Follow the journey of our solar exploration: from early Arab traders, to Galileos telescope, to the latest exploration of the planets in our solar system.</p>
-                <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+                <a href="../booking/booking.html" alt="Sending to booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div>
                 <img src="../images/roboticsandai1.jpg" alt="Robot sitting on the bench and reading from a tablet" class="background_image">
