--- a/events/getinvolved.html
+++ b/events/getinvolved.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <main>
-            <h1></h1>
+            <h1> Get Involved </h1>
             <img src="../images/library1.jpg" alt="Photo of our library" class="background_image">
             <div>
                 <h2 class="heading"> Support </h2>
