--- a/events/news.html
+++ b/events/news.html
@@ -78,7 +78,7 @@
                 </div>
                 <div>
                    <p>Holmen gata 14, 1090 Oslo </p> 
-                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+                   <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
                 </div>
                 <p> &#169; SciMuse 2022 </p>
             </section>
