--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     </div>
                 </section>
             </section> 
+            </section>
             <section class="news_heading">
                 <h2>NEWS</h2>
                 </section>
